2005-03-20  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	* app/core/gimpimage-convert.c: applied patch from Adam
	Moss converning gray->indexed conversion,
	fixes bug #170825.

2005-03-20  Sven Neumann  <sven@gimp.org>

	* app/text/gimptext.[ch]
	* app/text/gimptextlayer-transform.[ch]: some infrastructure for
	text transforms.

2005-03-20  Sven Neumann  <sven@gimp.org>

	* app/core/gimp-transform-utils.c (gimp_transform_matrix_perspective):
	cosmetic changes.

	* libgimpmath/gimpmatrix.[ch]
	* libgimpmath/gimpmath.def: added gimp_matrix_is_affine().

2005-03-19  Michael Natterer  <mitch@gimp.org>

	* app/core/gimpimage-sample-points.c
	* app/display/gimpdisplayshell-draw.c
	* app/display/gimpdisplayshell.c
	* app/tools/gimpcolortool.c: make sure sample points always have
	coordinates in the range [0..width/height-1], also added lots of
	+0.5 because they live at the pixels' centers, not at their
	borders. Fixed drawing of sample points at the display borders.

2005-03-19  Manish Singh  <yosh@gimp.org>

	* app/config/Makefile.am: actually link test program with
	libgimpconfig.

	* app/Makefile.am
	* libgimpwidgets/Makefile.am: reordered library link order to be
	consistent with shared library dependencies.

	* plug-ins/common/mkgen.pl: Cosmetic fix to the generated Makefile.am.

	* plug-ins/common/Makefile.am: regenerated.

2005-03-19  Manish Singh  <yosh@gimp.org>

	* gimp.spec.in: Remove outdated file.

2005-03-19  Manish Singh  <yosh@gimp.org>

	* app/composite/gimp-composite-altivec.[ch]: More accelerated functions
	(screen, grain_merge, grain_extract, divide, dodge) from Frederic
	Leroy.

	* app/composite/gimp-composite-altivec-installer.c
	* app/composite/gimp-composite-altivec-test.c: regenerated.

2005-03-19  Manish Singh  <yosh@gimp.org>

	* app/composite/gimp-composite-altivec.[ch]: More accelerated functions
	(multiply, blend) from Frederic Leroy.

	* app/composite/gimp-composite-altivec-installer.c